# 2025-vision-training

./: .gitignore  README.md
BaoJunchen/homework1/logo/: CMakeLists.txt  logo.md  main.cpp
BaoJunchen/homework1/photograph/: CMakeLists.txt  main.cpp  main2.cpp
BaoJunchen/homework2/apple/: CMakeLists.txt  main3.cpp
BaoJunchen/homework2/armor/: CMakeLists.txt  main.cpp
BaoJunchen/homework3/stocks/: CMakeLists.txt  main.cpp
CaoShuchen/homework1/photograph/: CMakeLists.txt
Haotian Fang/Homework1/photograph/: CMakeLists.txt  main.cpp
JBX-homework1/photograph/: CMakeLists.txt  main.cpp  points.txt
Wenxiang Shi/homework1/logo/: CMakeLists.txt  logo.cpp  logo.md
Wenxiang Shi/homework1/photograph/: CMakeLists.txt  photo.cpp  points_output.txt
Wenxiang Shi/homework2/armor/: CMakeLists.txt  ans.txt  armor.cpp  myans.txt
Wu Peiqin/action_demo/action_service/: CMakeLists.txt  package.xml
Wu Peiqin/action_demo/action_service/launch/: launch.py
Wu Peiqin/action_demo/action_service/launch/params/: params.yaml
Wu Peiqin/action_demo/action_service/src/: action_client.cpp  action_server.cpp
Wu Peiqin/detect/: CMakeLists.txt  detect.cpp  detect.md
Wu Peiqin/divide_topic/divide_service/: CMakeLists.txt  package.xml
Wu Peiqin/divide_topic/divide_service/src/: divide_client.cpp  divide_server.cpp
Wu Peiqin/photograph/: CMakeLists.txt  main.cpp
YeMingzhe/hw_1/calibration/: CMakeLists.txt  main.cpp
YeMingzhe/hw_1/calibration/calibrationResult/: calibrationResult.yml
YeMingzhe/hw_2/apple/: CMakeLists.txt  apple.md  main.cpp  test.cpp
Yutong Dong/homework4/action_tutorial/: CMakeLists.txt  package.xml
Yutong Dong/homework4/action_tutorial/action/: Move.action
Yutong Dong/homework4/action_tutorial/config/: params.yaml
Yutong Dong/homework4/action_tutorial/launch/: action_tutorial.launch.py
Yutong Dong/homework4/action_tutorial/src/: action_client.cpp  action_server.cpp
Zhang Jiajie/homework2/apple/: CMakeLists.txt  main.cpp
Zhang Jiajie/homework2/armor/: CMakeLists.txt  main.cpp
Zhang Jiajie/homework3/Stocks/: CMakeLists.txt  main.cpp  prediction.txt
ZhuMinyi/homework4/division/: CMakeLists.txt  README.md  package.xml
ZhuMinyi/homework4/division/install/: local_setup.sh  setup.sh
ZhuMinyi/homework4/division/install/division/lib/division/: client  server
ZhuMinyi/homework4/division/install/division/share/division/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ZhuMinyi/homework4/division/install/division/share/division/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  divisionConfig-version.cmake  divisionConfig.cmake  division__rosidl_typesupport_cExport-noconfig.cmake  division__rosidl_typesupport_cExport.cmake  division__rosidl_typesupport_cppExport-noconfig.cmake  division__rosidl_typesupport_cppExport.cmake  division__rosidl_typesupport_introspection_cExport-noconfig.cmake  division__rosidl_typesupport_introspection_cExport.cmake  division__rosidl_typesupport_introspection_cppExport-noconfig.cmake  division__rosidl_typesupport_introspection_cppExport.cmake  export_division__rosidl_generator_cExport-noconfig.cmake  export_division__rosidl_generator_cExport.cmake  export_division__rosidl_generator_cppExport.cmake  export_division__rosidl_generator_pyExport-noconfig.cmake  export_division__rosidl_generator_pyExport.cmake  export_division__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_division__rosidl_typesupport_fastrtps_cExport.cmake  export_division__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_division__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ZhuMinyi/homework4/division/install/division/share/division/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ZhuMinyi/homework4/division/install/division/share/division/srv/: Division.idl  Division.srv  Division_Request.msg  Division_Response.msg
ZhuMinyi/homework4/division/log/: latest_build
ZhuMinyi/homework4/division/src/: client.cpp  server.cpp
ZhuMinyi/homework4/division/srv/: Division.srv
ZhuMinyi/homework4/robot_action/: CMakeLists.txt  README.md  package.xml
ZhuMinyi/homework4/robot_action/action/: Move.action
ZhuMinyi/homework4/robot_action/config/: param.yaml
ZhuMinyi/homework4/robot_action/install/: local_setup.sh  setup.sh
ZhuMinyi/homework4/robot_action/install/robot_action/lib/robot_action/: client  server
ZhuMinyi/homework4/robot_action/install/robot_action/share/robot_action/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ZhuMinyi/homework4/robot_action/install/robot_action/share/robot_action/action/: Move.action  Move.idl
ZhuMinyi/homework4/robot_action/install/robot_action/share/robot_action/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robot_action__rosidl_generator_cExport-noconfig.cmake  (+21 more)
ZhuMinyi/homework4/robot_action/launch/: launch.py
ZhuMinyi/homework4/robot_action/log/: latest_build
ZhuMinyi/homework4/robot_action/src/: client.cpp  server.cpp
ZhuMinyi/hw2/apple/: CMakeLists.txt  main.cpp
ZhuMinyi/hw3/stocks/: CMakeLists.txt  main.cpp  result.txt
ZhuMinyi/photograph/: CMakeLists.txt  main.cpp
ZhuMinyi/photograph/.cache/clangd/index/: main.cpp.18E780E4DAB46142.idx
pzr/homework2/apple/: CMakeLists.txt  main.cpp
pzr/photograph/: CMakeLists.txt  camera.cpp
胡哲铖/homework2/armor/: CMakeLists.txt  armor.cpp  armor.yml
胡哲铖/homework2/armor/assets/: big_armor_scale.hpp
胡哲铖/homework4/division/: CMakeLists.txt  README.md  package.xml
胡哲铖/homework4/division/src/: division.cpp
(+939 files in other folders)
